[gd_scene load_steps=14 format=3 uid="uid://cbqml2b0rn61y"]

[ext_resource type="PackedScene" uid="uid://b6ngnfhdvraqr" path="res://parallax_background.tscn" id="1_g3u20"]
[ext_resource type="Script" path="res://main_title.gd" id="1_mrqmd"]
[ext_resource type="FontFile" uid="uid://ce7ho62e7e2jd" path="res://Fonts/Jersey20-Regular.ttf" id="2_hkwd8"]
[ext_resource type="Texture2D" uid="uid://d0s2jsb3uvmnl" path="res://Title-3.png" id="3_3yjo5"]
[ext_resource type="Texture2D" uid="uid://cc73h112icrgp" path="res://background_asesprite.png" id="4_px6dp"]
[ext_resource type="PackedScene" uid="uid://daolyiryu2ium" path="res://fade.tscn" id="5_q613m"]

[sub_resource type="LabelSettings" id="LabelSettings_2xfvg"]
font = ExtResource("2_hkwd8")
font_size = 14
font_color = Color(1, 1, 0.0431373, 1)
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_qfev0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_o4gpi"]
resource_name = "label"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_huldo"]
_data = {
"RESET": SubResource("Animation_qfev0"),
"label": SubResource("Animation_o4gpi")
}

[sub_resource type="Animation" id="Animation_1bn07"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title-3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title-3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(201, -50)]
}

[sub_resource type="Animation" id="Animation_ih5a8"]
resource_name = "tutorial"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Title-3:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1.2, 1.2), Vector2(1.3, 1.3), Vector2(1.2, 1.2), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title-3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(201, -40), Vector2(201, -30), Vector2(201, -20), Vector2(201, -10), Vector2(201, 0), Vector2(201, 10), Vector2(201, 20), Vector2(201, 30), Vector2(201, 40), Vector2(201, 50), Vector2(201, 60), Vector2(201, 70), Vector2(201, 80), Vector2(201, 90), Vector2(201, 100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ve66"]
_data = {
"RESET": SubResource("Animation_1bn07"),
"tutorial": SubResource("Animation_ih5a8")
}

[node name="MainTitle" type="Node2D"]
script = ExtResource("1_mrqmd")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_g3u20")]
position = Vector2(147, 87)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 500.0
offset_bottom = 332.0
color = Color(1, 1, 1, 0.12549)

[node name="Label" type="Label" parent="."]
offset_left = 94.0
offset_top = 185.0
offset_right = 292.0
offset_bottom = 210.0
text = "Toque na tela para iniciar a jornada...
"
label_settings = SubResource("LabelSettings_2xfvg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("../Label")
libraries = {
"": SubResource("AnimationLibrary_huldo")
}
autoplay = "label"

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_top = -11.0
offset_right = 500.0
offset_bottom = 305.0
texture_normal = ExtResource("4_px6dp")

[node name="Title-3" type="Sprite2D" parent="."]
position = Vector2(201, -50)
texture = ExtResource("3_3yjo5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ve66")
}
autoplay = "tutorial"
speed_scale = 0.357

[node name="Fade" parent="." instance=ExtResource("5_q613m")]
visible = false
position = Vector2(-20, -8)

[node name="Fade_timer" type="Timer" parent="Fade"]

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="Fade/Fade_timer" to="." method="_on_fade_timer_timeout"]
